# git-append

./: .envrc  .gitignore  CHANGELOG.md  Makefile  README.md  git-append  noise  pyproject.toml
.github/workflows/: cicd.yml
src/gitappend/: __init__.py
tests/: test_append.py  test_argparse.py  test_in_index.py  test_remove_file.py
