[tool.poetry]
name = "git-append"
version = "0.1.0"
description = "Concatenate files gracefully within git"
authors = ["John Trammell <john.trammell@gmail.com>"]
license = "Apache-2.0"
readme = "README.md"
packages = [{include = "gitappend", from="src"}]

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
bandit = "^1.7.5"
black = "^23.3.0"
coverage = "^7.2.5"
flake8 = "^6.0.0"
flake8-bugbear = "^23.5.9"
mypy = "^1.3.0"
pydocstyle = "^6.3.0"
pytest = "^7.3.1"

[tool.poetry.scripts]
git-append = "gitappend:main"

[tool.bandit]
skips = ["B404","B603","B607"]

[tool.black]
line-length = 79

[tool.mypy]
check_untyped_defs = "True"
disallow_any_generics = "True"
disallow_any_unimported = "True"
disallow_incomplete_defs = "True"
disallow_untyped_calls = "True"
disallow_untyped_decorators = "True"
disallow_untyped_defs = "True"
follow_imports = "normal"
ignore_missing_imports = "True"
no_implicit_optional = "True"
no_implicit_reexport = "True"
show_error_codes = "True"
show_error_context = "True"
strict_equality = "True"
strict_optional = "True"
warn_no_return = "True"
warn_redundant_casts = "True"
warn_return_any = "True"
warn_unused_ignores = "True"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
